RESOLVED FIXED133126
[Cocoa] WebProcess doesn't follow localization of UI process when run as a service
https://bugs.webkit.org/show_bug.cgi?id=133126
Summary [Cocoa] WebProcess doesn't follow localization of UI process when run as a se...
Alexey Proskuryakov
Reported 2014-05-20 10:51:03 PDT
We pass -AppleLanguages as an argument when launching child processes, but don't do anything when launching services. So, the service just uses system languages, potentially resulting in a mismatch with application language. One specific way this is observable is when running regression tests with non-English primary language - many accessibility tests fail because they get localized strings from accessibility framework. <rdar://problem/13396515> <rdar://problem/16561084>
Attachments
proposed fix (9.54 KB, patch)
2014-05-20 10:57 PDT, Alexey Proskuryakov
sam: review+
proposed patch (16.37 KB, patch)
2014-06-12 15:25 PDT, Alexey Proskuryakov
thorton: review+
ap: commit-queue-
Alexey Proskuryakov
Comment 1 2014-05-20 10:57:18 PDT
Created attachment 231777 [details] proposed fix
Tim Horton
Comment 2 2014-05-20 11:06:04 PDT
Comment on attachment 231777 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=231777&action=review > Source/WebKit2/Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.mm:94 > + [[NSUserDefaults standardUserDefaults] setObject:@[[NSString stringWithUTF8String:localization]] forKey:@"AppleLanguages" inDomain:NSArgumentDomain]; I think we put spaces inside the array literals.
Alexey Proskuryakov
Comment 3 2014-05-20 11:45:27 PDT
WebKit Commit Bot
Comment 4 2014-05-26 10:43:36 PDT
Re-opened since this is blocked by bug 133288
Alexey Proskuryakov
Comment 5 2014-06-12 15:25:02 PDT
Created attachment 232999 [details] proposed patch
Tim Horton
Comment 6 2014-07-01 11:42:07 PDT
Note You need to log in before you can comment on or make changes to this bug.