[Mac] WebProcess doesn't follow localization of UI process when run as a service https://bugs.webkit.org/show_bug.cgi?id=133126 <rdar://problem/13396515> <rdar://problem/16561084>

Reviewed by Sam Weinig and Tim Horton.


Source/WebKit2:
* Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.Development.mm:
(WebKit::handleXPCBootstrap):
(main):
* Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.mm:
(WebKit::handleXPCBootstrap):
(main):
Set localization very early in process lifetime (in development builds, that's
even before WebKit framework is loaded).

* UIProcess/Launcher/mac/ProcessLauncherMac.mm: (WebKit::connectToService):
Pass UI process localization to the service, computing it in the same way we do
for child processes.

Tools:
* WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
(WTR::InjectedBundle::platformInitialize): It was too late to override language
here, and it's not necessary any more. Keeping the code for older OS versions in
case it did have effect in some code paths.



Canonical link: https://commits.webkit.org/151149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169122 268f45cc-cd09-0410-ab3c-d52691b4dbfc